# experimental-hs-actors

./: LICENSE  README.md  experimental-hs-actors.cabal
src/: Actor.hs  Test.hs
src/Actor/: DSL.hs  Def.hs
src/Actor/DSL/: Def.hs  Impl.hs  Instances.hs
src/Actor/Def/: Classes.hs  Instances.hs  Types.hs
