name:                experimental-hs-actors
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/saksmt/experimental-hs-actors#readme
license:             BSD3
license-file:        LICENSE
author:              Kirill Saksin
maintainer:          smt@smt.run
copyright:           2017 Kirill Saksin
category:            Multithreading, Actor, Actor Model
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Actor
                     , Actor.Def
                     , Actor.Def.Instances
                     , Actor.Def.Classes
                     , Actor.Def.Types
                     , Actor.DSL
                     , Actor.DSL.Instances
                     , Actor.DSL.Def
                     , Actor.DSL.Impl

  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/saksmt/experimental-hs-actors
